--- a/analyzer-lsp-rules/rules/rules-reviewed/eap6/jotm/jotm.rhamt.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap6/jotm/jotm.rhamt.yaml
@@ -9,4 +9,4 @@
     when:
       java.referenced:
         location: IMPORT
-        pattern: org.objectweb.jotm.{*}
+        pattern: org.objectweb.jotm.*
