--- a/analyzer-lsp-rules/rules/rules-reviewed/eap6/weblogic/weblogic-ejb.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap6/weblogic/weblogic-ejb.windup.yaml
@@ -4,7 +4,7 @@
     when:
       java.referenced:
         location: IMPORT
-        pattern: weblogic.(ejb|ejb20|ejbgen)?.{*}
+        pattern: weblogic.(ejb|ejb20|ejbgen)?.*
   - message: This application contains WebLogic proprietary `weblogic.javaee.TransactionTimeoutSeconds`
       annotation.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-ejb.windup.xml-1
