--- a/analyzer-lsp-rules/rules/rules-reviewed/eap7/eap6/jax-ws.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap7/eap6/jax-ws.windup.yaml
@@ -11,4 +11,4 @@
         ignore: true
         java.referenced:
           location: METHOD
-          pattern: '{*}(java.net.URL, javax.xml.namespace.QName)'
+          pattern: '*(java.net.URL, javax.xml.namespace.QName)'
