--- a/analyzer-lsp-rules/rules/rules-reviewed/openjdk17/openjdk11/applet-api-deprecation.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/openjdk17/openjdk11/applet-api-deprecation.windup.yaml
@@ -5,7 +5,7 @@
     when:
       or:
       - java.referenced:
-          pattern: java.applet.{*}
+          pattern: java.applet.*
       - java.referenced:
           pattern: java.beans.AppletInitializer
       - java.referenced:
