--- a/analyzer-lsp-rules/rules/rules-reviewed/openjdk17/openjdk11/security-manager-deprecation.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/openjdk17/openjdk11/security-manager-deprecation.windup.yaml
@@ -15,34 +15,34 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk17/openjdk11/security-manager-deprecation.windup.xml-2
     when:
       java.referenced:
-        pattern: java.lang.System.(getSecurityManager|setSecurityManager)({*})
+        pattern: java.lang.System.(getSecurityManager|setSecurityManager)(*)
   - message: The java.lang.Thread::checkAccess method has been deprecated in Java
       17.. See the link for further information.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk17/openjdk11/security-manager-deprecation.windup.xml-3
     when:
       java.referenced:
-        pattern: java.lang.Thread.checkAccess({*})
+        pattern: java.lang.Thread.checkAccess(*)
   - message: The java.lang.ThreadGroup::checkAccess method has been deprecated in
       Java 17.. See the link for further information.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk17/openjdk11/security-manager-deprecation.windup.xml-4
     when:
       java.referenced:
-        pattern: java.lang.ThreadGroup.checkAccess({*})
+        pattern: java.lang.ThreadGroup.checkAccess(*)
   - message: The java.util.logging.LogManager::checkAccess method has been deprecated
       in Java 17.. See the link for further information.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk17/openjdk11/security-manager-deprecation.windup.xml-5
     when:
       java.referenced:
-        pattern: java.util.logging.LogManager.checkAccess({*})
+        pattern: java.util.logging.LogManager.checkAccess(*)
   - message: The java.util.concurrent.Executors::{method-names} method has been deprecated
       in Java 17.. See the link for further information.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk17/openjdk11/security-manager-deprecation.windup.xml-6
     when:
       java.referenced:
-        pattern: java.util.concurrent.Executors.(privilegedCallable|privilegedCallableUsingCurrentClassLoader|privilegedThreadFactory)({*})
+        pattern: java.util.concurrent.Executors.(privilegedCallable|privilegedCallableUsingCurrentClassLoader|privilegedThreadFactory)(*)
   - message: The javax.security.auth.Subject::{meth-name} method has been deprecated
       in Java 17.. See the link for further information.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk17/openjdk11/security-manager-deprecation.windup.xml-7
     when:
       java.referenced:
-        pattern: javax.security.auth.Subject.(doAsPrivileged|getSubject)({*})
+        pattern: javax.security.auth.Subject.(doAsPrivileged|getSubject)(*)
