--- a/analyzer-lsp-rules/rules/rules-reviewed/quarkus/springboot/springboot-jmx-to-quarkus.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/quarkus/springboot/springboot-jmx-to-quarkus.windup.yaml
@@ -12,4 +12,4 @@
     when:
       java.referenced:
         location: ANNOTATION
-        pattern: org.springframework.jmx.{*}
+        pattern: org.springframework.jmx.*
