--- a/analyzer-lsp-rules/rules/rules-reviewed/technology-usage/security-technology-usage.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/technology-usage/security-technology-usage.windup.yaml
@@ -8,7 +8,7 @@
       or:
       - java.referenced:
           location: ANNOTATION
-          pattern: javax.annotation.security.{*}
+          pattern: javax.annotation.security.*
       - xml:
           filepaths:
           - web.xml
