--- a/analyzer-lsp-rules/rules/rules-reviewed/azure/eap/eap-to-azure-appservice-certificates.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/azure/eap/eap-to-azure-appservice-certificates.windup.yaml
@@ -4,7 +4,7 @@
       or:
       - java.referenced:
           location: METHOD_CALL
-          pattern: java.security.KeyStore.getInstance({*})
+          pattern: java.security.KeyStore.getInstance(*)
       - java.referenced:
           location: METHOD_CALL
-          pattern: java.security.KeyStore.load({*})
+          pattern: java.security.KeyStore.load(*)
