--- a/analyzer-lsp-rules/rules/rules-reviewed/camel3/camel2/xml-moved-components.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/camel3/camel2/xml-moved-components.windup.yaml
@@ -8,7 +8,7 @@
       ignore: true
       java.referenced:
         location: IMPORT
-        pattern: org.apache.camel.util.component.{*}
+        pattern: org.apache.camel.util.component.*
   - message: The class `org.apache.camel.impl.{moved}` has been moved to `org.apache.camel.impl.engine`
       package in `camel-base` dependency.. `org.apache.camel:camel-base` is a transitive
       dependency of `camel-core` but it could be used also separately to trim the
