--- a/analyzer-lsp-rules/rules/rules-reviewed/eap6/commonj/commonj.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap6/commonj/commonj.windup.yaml
@@ -4,7 +4,7 @@
     when:
       java.referenced:
         location: IMPORT
-        pattern: commonj.timers.{*}
+        pattern: commonj.timers.*
   - message: Commonj Timer Manager API is similar to the EJB 3.1 java.ejb.Timer Service..
       In Java EE 6, the Timer Service was updated to allow cron like configuration
       of scheduling which is similar to Quartz's timer configurations.
@@ -22,7 +22,7 @@
     - commonj
     when:
       java.referenced:
-        pattern: commonj.work.{*}
+        pattern: commonj.work.*
   - message: The CommonJ WorkManager can be replaced with a JCA Resource Adapter.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/commonj/commonj.windup.xml-4
     when:
