--- a/analyzer-lsp-rules/rules/rules-reviewed/eap6/uncategorized/environment-dependent.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap6/uncategorized/environment-dependent.windup.yaml
@@ -6,7 +6,7 @@
     when:
       java.referenced:
         location: METHOD_CALL
-        pattern: java.lang.Class.forName({*}
+        pattern: java.lang.Class.forName(*
   - message: This method lookups an object using a JNDI String. During the migration
       process, some entity JNDI bindings may change.. Ensure that the JNDI Name does
       not need to change for JBoss EAP.. *For Example:*. ```java. (ConnectionFactory)initialContext.lookup("weblogic.jms.ConnectionFactory");.
@@ -18,7 +18,7 @@
       ignore: true
       java.referenced:
         location: METHOD_CALL
-        pattern: javax.naming.Context.lookup{*}
+        pattern: javax.naming.Context.lookup*
   - message: In JBoss EAP, the `InitialContext` should be instantiated with no arguments.
       Once an instance is constructed, look up the service using portable JNDI lookup
       syntax. Ensure also that in case system properties for `InitialContext` are
@@ -31,7 +31,7 @@
       ignore: true
       java.referenced:
         location: CONSTRUCTOR_CALL
-        pattern: javax.naming.InitialContext(java.util.Hashtable{*}
+        pattern: javax.naming.InitialContext(java.util.Hashtable*
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/uncategorized/environment-dependent.windup.xml-3
     tag:
     - webservice
@@ -48,7 +48,7 @@
       ignore: true
       java.referenced:
         location: CONSTRUCTOR_CALL
-        pattern: javax.management.(ObjectName){*}
+        pattern: javax.management.(ObjectName)*
   - message: After migration, some of the JMX beans provided by the previous server
       may not be present anymore.. Ensure that the `javax.management.{suffix}` does
       not need to change for JBoss EAP.
@@ -58,7 +58,7 @@
       ignore: true
       java.referenced:
         location: CONSTRUCTOR_CALL
-        pattern: javax.management.(remote.JMXServiceURL){*}
+        pattern: javax.management.(remote.JMXServiceURL)*
   - message: After migration, JMX connection String or parameters may be different
       than the one provided by previous server.. As an example, `javax.management.remote.JMXConnectorFactory.PROTOCOL_PROVIDER_PACKAGES`
       will change.. Ensure that any of the parameters does not need to change for
@@ -69,4 +69,4 @@
       ignore: true
       java.referenced:
         location: METHOD_CALL
-        pattern: javax.management.remote.JMXConnectorFactory.connect({*})
+        pattern: javax.management.remote.JMXConnectorFactory.connect(*)
