--- a/analyzer-lsp-rules/rules/rules-reviewed/eap6/weblogic/weblogic-catchall.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap6/weblogic/weblogic-catchall.windup.yaml
@@ -2,13 +2,13 @@
     when:
       and:
       - java.referenced:
-          pattern: com.weblogic.{*}
+          pattern: com.weblogic.*
       - java.referenced:
-          pattern: com.bea.{*}
+          pattern: com.bea.*
       - java.referenced:
-          pattern: bea.{*}
+          pattern: bea.*
       - java.referenced:
-          pattern: weblogic.{*}
+          pattern: weblogic.*
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-catchall.windup.xml-1
     when:
       java.referenced:
