--- a/analyzer-lsp-rules/rules/rules-reviewed/eap7/eap6/resteasy.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap7/eap6/resteasy.windup.yaml
@@ -144,7 +144,7 @@
     when:
       java.referenced:
         location: METHOD_CALL
-        pattern: org.jboss.resteasy.spi.ResteasyProviderFactory.add{*}
+        pattern: org.jboss.resteasy.spi.ResteasyProviderFactory.add*
   - message: Use `javax.ws.rs.ext.ReaderInterceptorContext` instead of `org.jboss.resteasy.spi.interception.MessageBodyReaderContext`..
       The RESTEasy interceptor facility introduced in release 2.x is replaced by the
       JAX-RS 2.0 compliant interceptor facility in release 3.0.x.
@@ -208,55 +208,55 @@
     when:
       java.referenced:
         location: METHOD_CALL
-        pattern: org.jboss.resteasy.plugins.delegates.ServerCookie.checkName{*}
+        pattern: org.jboss.resteasy.plugins.delegates.ServerCookie.checkName*
   - message: Empty
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap6/resteasy.windup.xml-33
     when:
       java.referenced:
         location: METHOD_CALL
-        pattern: org.jboss.resteasy.plugins.providers.jaxb.JAXBContextWrapper.createValidator{*}
+        pattern: org.jboss.resteasy.plugins.providers.jaxb.JAXBContextWrapper.createValidator*
   - message: Replace method calls of `encodeRedirectUrl` with `encodeRedirectURL(String
       url)`.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap6/resteasy.windup.xml-34
     when:
       java.referenced:
         location: METHOD_CALL
-        pattern: org.jboss.resteasy.core.ResteasyHttpServletResponseWrapper.encodeRedirectUrl{*}
+        pattern: org.jboss.resteasy.core.ResteasyHttpServletResponseWrapper.encodeRedirectUrl*
   - message: Replace `ResteasyHttpServletResponseWrapper#encodeUrl` with `ResteasyHttpServletResponseWrapper#encodeURL(String
       url)`.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap6/resteasy.windup.xml-35
     when:
       java.referenced:
         location: METHOD_CALL
-        pattern: org.jboss.resteasy.core.ResteasyHttpServletResponseWrapper.encodeUrl{*}
+        pattern: org.jboss.resteasy.core.ResteasyHttpServletResponseWrapper.encodeUrl*
   - message: '`MultipartFormDataInputImpl#getFormData` method will be removed in the
       future. Use `MultipartFormDataInput#getFormDataMap()` instead.'
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap6/resteasy.windup.xml-36
     when:
       java.referenced:
         location: METHOD_CALL
-        pattern: org.jboss.resteasy.plugins.providers.multipart.MultipartFormDataInputImpl.getFormData{*}
+        pattern: org.jboss.resteasy.plugins.providers.multipart.MultipartFormDataInputImpl.getFormData*
   - message: '`MultipartFormDataInput#getFormData` method will be removed in the future.
       Use `MultipartFormDataInput#getFormDataMap()` instead.'
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap6/resteasy.windup.xml-37
     when:
       java.referenced:
         location: METHOD_CALL
-        pattern: org.jboss.resteasy.plugins.providers.multipart.MultipartFormDataInput.getFormData{*}
+        pattern: org.jboss.resteasy.plugins.providers.multipart.MultipartFormDataInput.getFormData*
   - message: As of Version 2.1 of the Java Servlet API, use `ResteasyHttpServletRequestWrapper.isRequestedSessionIdFromURL()`
       instead.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap6/resteasy.windup.xml-38
     when:
       java.referenced:
         location: METHOD_CALL
-        pattern: org.jboss.resteasy.core.ResteasyHttpServletRequestWrapper.isRequestedSessionIdFromUrl{*}
+        pattern: org.jboss.resteasy.core.ResteasyHttpServletRequestWrapper.isRequestedSessionIdFromUrl*
   - message: Method `org.jboss.resteasy.plugins.providers.jaxb.SecureUnmarshaller#isValidating`
       is deprecated without a replacement.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap6/resteasy.windup.xml-39
     when:
       java.referenced:
         location: METHOD_CALL
-        pattern: org.jboss.resteasy.plugins.providers.jaxb.SecureUnmarshaller.isValidating{*}
+        pattern: org.jboss.resteasy.plugins.providers.jaxb.SecureUnmarshaller.isValidating*
   - message: RESTEasy 3 deprecates method `org.jboss.resteasy.plugins.delegates.ServerCookie#maybeQuote`
       without a replacement.. It was deprecated in the original `org.apache.tomcat.util.http.ServerCookie`
       class which was a template for this method.
@@ -264,14 +264,14 @@
     when:
       java.referenced:
         location: METHOD_CALL
-        pattern: org.jboss.resteasy.plugins.delegates.ServerCookie.maybeQuote{*}
+        pattern: org.jboss.resteasy.plugins.delegates.ServerCookie.maybeQuote*
   - message: Method `org.jboss.resteasy.plugins.providers.jaxb.SecureUnmarshaller#setAdapter`
       is deprecated in RESTEasy 3.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap6/resteasy.windup.xml-41
     when:
       java.referenced:
         location: METHOD_CALL
-        pattern: org.jboss.resteasy.plugins.providers.jaxb.SecureUnmarshaller.setAdapter{*}
+        pattern: org.jboss.resteasy.plugins.providers.jaxb.SecureUnmarshaller.setAdapter*
   - message: As of version 2.1, due to ambiguous meaning of the message parameter.
       To set a status code use `setStatus(int)` instead,. to send an error with a
       description use `sendError(int, String)`. Sets the status code and message for
@@ -280,21 +280,21 @@
     when:
       java.referenced:
         location: METHOD_CALL
-        pattern: org.jboss.resteasy.core.ResteasyHttpServletResponseWrapper.setStatus{*}
+        pattern: org.jboss.resteasy.core.ResteasyHttpServletResponseWrapper.setStatus*
   - message: RESTEasy 3 deprecates method `org.jboss.resteasy.plugins.providers.jaxb.SecureUnmarshaller#setValidating`
       without a replacement.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap6/resteasy.windup.xml-43
     when:
       java.referenced:
         location: METHOD_CALL
-        pattern: org.jboss.resteasy.plugins.providers.jaxb.SecureUnmarshaller.setValidating{*}
+        pattern: org.jboss.resteasy.plugins.providers.jaxb.SecureUnmarshaller.setValidating*
   - message: RESTEasy 3 deprecates `org.jboss.resteasy.auth.oauth.OAuthValidator#validateMessage`
       method without a replacement.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap6/resteasy.windup.xml-44
     when:
       java.referenced:
         location: METHOD_CALL
-        pattern: org.jboss.resteasy.auth.oauth.OAuthValidator.validateMessage{*}
+        pattern: org.jboss.resteasy.auth.oauth.OAuthValidator.validateMessage*
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap6/resteasy.windup.xml-45
     when:
       java.referenced:
