--- a/analyzer-lsp-rules/rules/rules-reviewed/openjdk11/openjdk8/java-removals.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/openjdk11/openjdk8/java-removals.windup.yaml
@@ -11,7 +11,7 @@
           pattern: java.lang.Thread.stop({.+})
       - java.referenced:
           location: METHOD_CALL
-          pattern: java.lang.Thread.destroy({*})
+          pattern: java.lang.Thread.destroy(*)
   - message: Java 9 introduced the `StackWalker API` to replace `sun.reflect.Reflection`..
       As such, the use of `sun.reflect.Reflection` class and particular the `getCallerClass`
       method should no longer be needed.. Refer to the example changeset linked below.
@@ -20,10 +20,10 @@
       or:
       - java.referenced:
           location: IMPORT
-          pattern: sun.reflect.Reflection{*}
+          pattern: sun.reflect.Reflection*
       - java.referenced:
           location: METHOD_CALL
-          pattern: sun.reflect.Reflection{*}
+          pattern: sun.reflect.Reflection*
   - message: '`sun.reflect.CallerSensitive` annotation was deprecated in Java 9..
       Refer to the example changeset linked below.'
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk11/openjdk8/java-removals.windup.xml-2
@@ -31,10 +31,10 @@
       or:
       - java.referenced:
           location: IMPORT
-          pattern: sun.reflect.CallerSensitive{*}
+          pattern: sun.reflect.CallerSensitive*
       - java.referenced:
           location: ANNOTATION
-          pattern: sun.reflect.CallerSensitive{*}
+          pattern: sun.reflect.CallerSensitive*
   - message: The `javax.security.auth.Policy` class has been removed.. It should be
       replaced by the use of `java.security.Policy` and `java.security.ProtectionDomain`..
       Usage of `policy.getPermissions(subject,codeSource)` should be  replaced with
@@ -56,7 +56,7 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk11/openjdk8/java-removals.windup.xml-4
     when:
       java.referenced:
-        pattern: java.lang.SecurityManager.(checkAwtEventQueueAccess|checkSystemClipboardAccess|checkTopLevelWindow)({*})
+        pattern: java.lang.SecurityManager.(checkAwtEventQueueAccess|checkSystemClipboardAccess|checkTopLevelWindow)(*)
   - message: The implementation of `java.lang.SecurityManager.checkMemberAccess(java.lang.Class,
       int)` relies on an assumption. that the caller is at a stack depth of 4, which
       is not something that can be enforced, making the code error-prone.. Replace
@@ -64,7 +64,7 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk11/openjdk8/java-removals.windup.xml-5
     when:
       java.referenced:
-        pattern: java.lang.SecurityManager.checkMemberAccess({*})
+        pattern: java.lang.SecurityManager.checkMemberAccess(*)
   - message: '`java.util.logging.LogManager.addPropertyChangeListener()` method was
       removed in Java 9.. In order to listen to property change events, please consider
       overriding the `java.util.logging.LogManager.readConfiguration` methods,. which
@@ -72,7 +72,7 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk11/openjdk8/java-removals.windup.xml-6
     when:
       java.referenced:
-        pattern: java.util.logging.LogManager.addPropertyChangeListener({*})
+        pattern: java.util.logging.LogManager.addPropertyChangeListener(*)
   - message: '`java.util.logging.LogManager.removePropertyChangeListener()` method
       was removed in Java 9.. In order to listen to property change events, please
       consider overriding the `java.util.logging.LogManager.readConfiguration` methods,.
@@ -80,7 +80,7 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk11/openjdk8/java-removals.windup.xml-7
     when:
       java.referenced:
-        pattern: java.util.logging.LogManager.removePropertyChangeListener({*})
+        pattern: java.util.logging.LogManager.removePropertyChangeListener(*)
   - message: Property listener methods on `Pack200.Packer` and `Pack200.Unpacker`
       have been removed.. Instead, a strategy based on polling the `PROGRESS` value
       maintained by `java.util.jar.Pack200.Packer`. or `java.util.jar.Pack200.Unpacker`
@@ -89,13 +89,13 @@
     when:
       or:
       - java.referenced:
-          pattern: java.util.jar.Pack200.Packer.addPropertyChangeListener({*})
+          pattern: java.util.jar.Pack200.Packer.addPropertyChangeListener(*)
       - java.referenced:
-          pattern: java.util.jar.Pack200.Packer.removePropertyChangeListener({*})
+          pattern: java.util.jar.Pack200.Packer.removePropertyChangeListener(*)
       - java.referenced:
-          pattern: java.util.jar.Pack200.Unpacker.addPropertyChangeListener({*})
+          pattern: java.util.jar.Pack200.Unpacker.addPropertyChangeListener(*)
       - java.referenced:
-          pattern: java.util.jar.Pack200.Unpacker.removePropertyChangeListener({*})
+          pattern: java.util.jar.Pack200.Unpacker.removePropertyChangeListener(*)
   - message: The `sun.misc.Unsafe` API is scheduled for removal in the long term,
       and some of its methods have been removed. In short term, please consider the
       following:. - The `get` and `put` methods have equivalents that take long offsets
@@ -112,7 +112,7 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk11/openjdk8/java-removals.windup.xml-9
     when:
       java.referenced:
-        pattern: sun.misc.Unsafe.(getInt|putInt|getFloat|putFloat|getDouble|putDouble|getBoolean|putBoolean|getObject|putObject|getByte|putByte|getChar|putChar|getShort|putShort|getLong|putLong|fieldOffset|staticFieldBase|tryMonitorEnter|monitorEnter|monitorExit)({*})
+        pattern: sun.misc.Unsafe.(getInt|putInt|getFloat|putFloat|getDouble|putDouble|getBoolean|putBoolean|getObject|putObject|getByte|putByte|getChar|putChar|getShort|putShort|getLong|putLong|fieldOffset|staticFieldBase|tryMonitorEnter|monitorEnter|monitorExit)(*)
   - message: The `sun.misc.BASE64{encoder-decoder}` class has been removed.. It can
       be replaced with `Base64.{encoder-decoder}` class instantiated using `java.util.Base64.getMime{encoder-decoder}()`
       method.. For further examples on how to replace the `BASE64{encoder-decoder}`
@@ -121,7 +121,7 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk11/openjdk8/java-removals.windup.xml-10
     when:
       java.referenced:
-        pattern: sun.misc.BASE64(Encoder|Decoder){*}
+        pattern: sun.misc.BASE64(Encoder|Decoder)*
   - message: The `java.lang.System.runFinalizersOnExit(boolean value)` and `java.lang.Runtime.runFinalizersOnExit(boolean
       value)`. have been removed as they are regarded as inherently unsafe. Running
       finalizers on exit was disabled by default. and enabling it could result in
@@ -131,9 +131,9 @@
     when:
       or:
       - java.referenced:
-          pattern: java.lang.System.runFinalizersOnExit({*})
+          pattern: java.lang.System.runFinalizersOnExit(*)
       - java.referenced:
-          pattern: java.lang.Runtime.runFinalizersOnExit({*})
+          pattern: java.lang.Runtime.runFinalizersOnExit(*)
   - message: The `java.awt.Font.getPeer()` and `java.awt.Component.getPeer()` methods
       have been removed.. The `java.awt.peer` and `java.awt.dnd.peer` are no longer
       accessible and are considered. internal implementation details, the API may
@@ -146,10 +146,10 @@
       or:
       - java.referenced:
           location: METHOD_CALL
-          pattern: java.awt.Font.getPeer({*})
+          pattern: java.awt.Font.getPeer(*)
       - java.referenced:
           location: METHOD_CALL
-          pattern: java.awt.Component.getPeer({*})
+          pattern: java.awt.Component.getPeer(*)
   - message: The changes that were implemented in JDK 9 may impact code that creates
       class loaders with null (that is, the bootstrap class loader). as the parent
       class loader and assumes that all platform classes are visible to the parent..
