--- a/analyzer-lsp-rules/rules/rules-reviewed/openjdk11/openjdk8/removed-javaee-modules.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/openjdk11/openjdk8/removed-javaee-modules.windup.yaml
@@ -4,7 +4,7 @@
     when:
       java.referenced:
         location: IMPORT
-        pattern: javax.activation{*}
+        pattern: javax.activation*
   - message: The `java.corba` (CORBA) module has been removed from OpenJDK 11.. If
       you wish to continue using CORBA within your application consider using the
       GlassFish implementation of CORBA and RMI-IIOP.
@@ -13,17 +13,17 @@
       or:
       - java.referenced:
           location: IMPORT
-          pattern: javax.activity.{*}
+          pattern: javax.activity.*
       - java.referenced:
           location: IMPORT
-          pattern: javax.rmi.{*}
+          pattern: javax.rmi.*
       - java.referenced:
           location: IMPORT
-          pattern: com.sun.corba.{*}
+          pattern: com.sun.corba.*
   - message: Add the `jakarta.annotation` dependency to your application's `pom.xml`..
       `<groupId>jakarta.annotation</groupId>`. `<artifactId>jakarta.annotation-api</artifactId>`
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openjdk11/openjdk8/removed-javaee-modules.windup.xml-2
     when:
       java.referenced:
         location: IMPORT
-        pattern: javax.annotation{*}
+        pattern: javax.annotation*
