--- a/analyzer-lsp-rules/rules/rules-reviewed/openshift/jni-native-code.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/openshift/jni-native-code.windup.yaml
@@ -9,31 +9,31 @@
       or:
       - java.referenced:
           location: METHOD_CALL
-          pattern: java.lang.System.load({*})
+          pattern: java.lang.System.load(*)
       - java.referenced:
           location: METHOD_CALL
-          pattern: java.lang.System.loadLibrary({*})
+          pattern: java.lang.System.loadLibrary(*)
       - java.referenced:
           location: METHOD_CALL
-          pattern: java.lang.System.mapLibraryName({*})
+          pattern: java.lang.System.mapLibraryName(*)
       - java.referenced:
           location: METHOD_CALL
-          pattern: java.lang.Runtime.load({*})
+          pattern: java.lang.Runtime.load(*)
       - java.referenced:
           location: METHOD_CALL
-          pattern: java.lang.Runtime.loadLibrary({*})
+          pattern: java.lang.Runtime.loadLibrary(*)
       - java.referenced:
           location: CONSTRUCTOR_CALL
-          pattern: com.sun.jna.{*}
+          pattern: com.sun.jna.*
       - java.referenced:
           location: IMPORT
-          pattern: com.sun.jna.{*}
+          pattern: com.sun.jna.*
       - java.referenced:
           location: INHERITANCE
-          pattern: com.sun.jna.{*}
+          pattern: com.sun.jna.*
       - java.referenced:
           location: METHOD_CALL
-          pattern: com.sun.jna.{*}
+          pattern: com.sun.jna.*
       - java.referenced:
           location: VARIABLE_DECLARATION
-          pattern: com.sun.jna.{*}
+          pattern: com.sun.jna.*
