--- a/analyzer-lsp-rules/rules/rules-reviewed/openshift/mail.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/openshift/mail.windup.yaml
@@ -9,10 +9,10 @@
     when:
       or:
       - java.referenced:
-          pattern: javax.mail.{*}
+          pattern: javax.mail.*
       - java.referenced:
-          pattern: com.sun.mail.{*}
+          pattern: com.sun.mail.*
       - java.referenced:
-          pattern: org.simplejavamail.{*}
+          pattern: org.simplejavamail.*
       - java.referenced:
-          pattern: org.apache.commons.mail.{*}
+          pattern: org.apache.commons.mail.*
