--- a/analyzer-lsp-rules/rules/rules-reviewed/openshift/session.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/openshift/session.windup.yaml
@@ -23,6 +23,6 @@
     when:
       or:
       - java.referenced:
-          pattern: javax.servlet.http.HttpSession.setAttribute({*})
+          pattern: javax.servlet.http.HttpSession.setAttribute(*)
       - java.referenced:
-          pattern: javax.servlet.http.HttpSession.putValue({*})
+          pattern: javax.servlet.http.HttpSession.putValue(*)
