--- a/analyzer-lsp-rules/rules/rules-reviewed/openshift/socket-communication.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/openshift/socket-communication.windup.yaml
@@ -7,13 +7,13 @@
     when:
       or:
       - java.referenced:
-          pattern: java.net.(Socket|MulticastSocket|DatagramSocket|InetSocketAddress){*}
+          pattern: java.net.(Socket|MulticastSocket|DatagramSocket|InetSocketAddress)*
       - java.referenced:
-          pattern: java.net.ServerSocket{*}
+          pattern: java.net.ServerSocket*
       - java.referenced:
-          pattern: java.nio.channels.AsynchronousServerSocketChannel{*}
+          pattern: java.nio.channels.AsynchronousServerSocketChannel*
       - java.referenced:
-          pattern: java.nio.channels.ServerSocketChannel{*}
+          pattern: java.nio.channels.ServerSocketChannel*
   - message: 'Java NIO channels provide bulk data transfer to and from NIO buffers.
       They can be synchronously and asynchronously read and written.. Channels are
       not suitable for a cloud environment because they are not a reliable or scalable
@@ -23,4 +23,4 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/openshift/socket-communication.windup.xml-1
     when:
       java.referenced:
-        pattern: java.nio.channels.(NetworkChannel|MulticastChannel|DatagramChannel|AsynchronousSocketChannel|SocketChannel){*}
+        pattern: java.nio.channels.(NetworkChannel|MulticastChannel|DatagramChannel|AsynchronousSocketChannel|SocketChannel)*
