--- a/analyzer-lsp-rules/rules/rules-reviewed/technology-usage/observability.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/technology-usage/observability.windup.yaml
@@ -16,6 +16,6 @@
       or:
       - java.referenced:
           location: ANNOTATION
-          pattern: org.springframework.jmx.{*}
+          pattern: org.springframework.jmx.*
       - xml:
           xpath: //*/c:bean/@class[windup:matches(self::node(), 'org.springframework.jmx.export.MBeanExporter')]
